--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "forms": "^1.3.2",
+    "json-server": "^1.0.0-alpha.23",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -29,7 +34,8 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.2.1",
     "@angular/cli": "^17.2.1",
-    "@angular/compiler-cli": "^17.2.0",
+    "@angular/compiler-cli": "^17.2.3",
+    "@angular/localize": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
